2014-10-10  David B. Lamkins  <david@lamkins.net>

	* aplwrap.c, edit.c, edit.h, search.c, search.h: Enable search
	only for versions of GTK+ (3.10 or later) which support
	GtkSearchBar.

	* search.h (): Implement search in edit windows.

	* edit.h (): Implement search in edit windows.

	* search.c (new_search_context, do_search)
	(search_key_press_event, search_changed_event): Implement search
	in edit windows.

	* edit.c (edit_key_press_event, edit_object, edit_file): Implement
	search in edit windows.

	* aplwrap.c (key_press_event, main): Implement search in edit
	windows.

	* aplwrap.c (do_search, search_key_press_event, search_changed)
	(key_press_event, main): Implement search in transcript.

2014-10-09  David B. Lamkins  <david@lamkins.net>

	* aplwrap.c (home_to_end_of_apl_prompt, advance_by_apl_prompt)
	(key_press_event): Allow home_to_end_of_apl_prompt() to extend
	selection. Clarify KEY_BINDINGS.md.

	* apl.c (make_env): Add APLWRAP_BUILD environment variable.

	* help.c (show_about): Put build info on its own line in the About
	dialog.

	* help.c (show_about): Tweak About dialog: Pull title from
	aplwrap.h; fix Chris' email link; add build version information.

	* aplwrap.c (main): Pull default title from aplwrap.h.

	* menu.c (open_object_cb): Disable typeahead search in Open Object
	dialog. Document search keys.

	* menu.c (names_search, open_object_cb): Implement substring
	search in Open Object dialog.

2014-10-08  David B. Lamkins  <david@lamkins.net>

	* help.h (): Factor out help menu.

	* help.c (): Factor out help menu.

	* menu.c (build_menubar): Factor out help menu.

	* edit.c (build_edit_menubar): Add Ctrl-W accelerator key to
	close edit window. Add help menu to edit window.

	* menu.c (open_object_cb): Handle deactivated selection in Open
	Object dialog.

	* menu.c (open_object_cb): Previous patch was wrong. This one
	captures current selection in Open Object dialog.

	* menu.c (open_object_cb): Preselect first item in Open Object